fix  plotting issues

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -94,22 +94,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "['Component',\n",
+       " 'DEFAULT_COMPONENT_MAP',\n",
+       " 'DEFAULT_FIELDS',\n",
+       " 'Decor',\n",
+       " 'Legend',\n",
+       " '__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " 'gravel_decor',\n",
+       " 'gs2litho',\n",
+       " 'litholegend',\n",
+       " 'sand_decor',\n",
+       " 'shale_decor',\n",
+       " 'wentworth']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(d.keys())"
+    "from graphiclog import defaults\n",
+    "\n",
+    "dir(defaults)"
    ]
   },
   {
@@ -182,6 +202,55 @@
    "source": [
     "utils.safelen(None)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(np.array([3,1,2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {'_values' : None}\n",
+    "\n",
+    "'_values' in d.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
