ignore missing for NG

--- a/notebooks/Zane_template.ipynb
+++ b/notebooks/Zane_template.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
     "\n",
     "\n",
     "# Sequence-level metadata\n",
-    "METACOLS = ['name', 'count', 'collection', 'eod', 'eodnum']\n",
+    "METACOLS = ['name', 'count', 'collection', 'eod', 'eodnum', 'ng', 'ar']\n",
     "\n",
     "\n",
     "# Lithology component map\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,16 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Striplog(522 Intervals, start=0.0, stop=118.32348342183599)"
+       "Striplog(133 Intervals, start=2.943759267071133e-05, stop=6.4)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,20 +205,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'vaca1',\n",
-       " 'count': 454,\n",
-       " 'collection': 'Tres Pasos',\n",
-       " 'eod': 'slopechannel',\n",
-       " 'eodnum': 2}"
+       "{'name': 'Fryer Cabrillo Section S01',\n",
+       " 'count': 369,\n",
+       " 'collection': 'Point Loma',\n",
+       " 'eod': 'fan',\n",
+       " 'eodnum': 1,\n",
+       " 'ng': 0.688309671755613,\n",
+       " 'ar': 0.0522388059701493}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,61 +231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><tr><td style=\"width:2em; background-color:#DDDDDD\" rowspan=\"6\"></td><td><strong>top</strong></td><td>118.32348342183599</td></tr><tr><td><strong>primary</strong></td><td><table><tr><td><strong>lithology</strong></td><td>sand</td></tr></table></td></tr><tr><td><strong>summary</strong></td><td>0.52 m of sand</td></tr><tr><td><strong>description</strong></td><td></td></tr><tr><td><strong>data</strong></td><td><table><tr><td><strong>snd</strong></td><td>1.0</td></tr><tr><td><strong>shl</strong></td><td>-0.0</td></tr><tr><td><strong>th</strong></td><td>0.5228030386838329</td></tr><tr><td><strong>gs_tops_psi</strong></td><td>-2.0785</td></tr><tr><td><strong>mean_gs_psi</strong></td><td>-1.8541</td></tr><tr><td><strong>max_gs_psi</strong></td><td>-1.8371</td></tr><tr><td><strong>grain_size_psi</strong></td><td>[-2.0783 -2.0297 -1.9236 -1.8836 -1.8505 -1.837  -1.837 ]</td></tr><tr><td><strong>depth_m</strong></td><td>[118.3235 118.3175 118.3138 118.2698 118.2148 117.813  117.8007]</td></tr></table></td></tr><tr><td><strong>base</strong></td><td>117.80068038315216</td></tr></table>"
-      ],
-      "text/plain": [
-       "Interval({'data': {'snd': 1.0, 'shl': -0.0, 'th': 0.5228030386838329, 'gs_tops_psi': -2.0785, 'mean_gs_psi': -1.8541, 'max_gs_psi': -1.8371, 'grain_size_psi': array([-2.0783, -2.0297, -1.9236, -1.8836, -1.8505, -1.837 , -1.837 ]), 'depth_m': array([118.3235, 118.3175, 118.3138, 118.2698, 118.2148, 117.813 ,\n",
-       "       117.8007])}, 'top': Position({'middle': 118.32348342183599, 'units': 'm'}), 'base': Position({'middle': 117.80068038315216, 'units': 'm'}), 'description': '', 'components': [Component({'lithology': 'sand'})]})"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# The first bed\n",
-    "seq[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'sand'"
+       "0.6883096717556124"
       ]
      },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "seq[0].primary.lithology"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8585672641231835"
-      ]
-     },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,16 +251,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2596401028277635"
+       "0.05511811023622047"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
