change name to litholog

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -127,7 +127,7 @@
     }
    ],
    "source": [
-    "from graphiclog import defaults\n",
+    "from litholog import defaults\n",
     "\n",
     "dir(defaults)"
    ]
@@ -180,7 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from graphiclog import utils"
+    "from litholog import utils"
    ]
   },
   {
