--- a/notebooks/Zane_stats_dev_2.ipynb
+++ b/notebooks/Zane_stats_dev_2.ipynb
@@ -16,8 +16,8 @@
     "\n",
     "plt.style.use('ggplot')\n",
     "\n",
-    "import graphiclog\n",
-    "from graphiclog import utils, io, defaults"
+    "import litholog\n",
+    "from litholog import utils, io, defaults"
    ]
   },
   {
@@ -28,7 +28,7 @@
     {
      "data": {
       "text/plain": [
-       "('/Users/zanejobe/opt/anaconda3/lib/python3.7/site-packages/graphiclog/__init__.py',\n",
+       "('/Users/zanejobe/opt/anaconda3/lib/python3.7/site-packages/litholog/__init__.py',\n",
        " ['Bed',\n",
        "  'BedSequence',\n",
        "  '__builtins__',\n",
@@ -54,7 +54,7 @@
     }
    ],
    "source": [
-    "graphiclog.__file__, dir(graphiclog)"
+    "litholog.__file__, dir(litholog)"
    ]
   },
   {
@@ -76,7 +76,7 @@
     }
    ],
    "source": [
-    "graphiclog.defaults.litholegend.plot()"
+    "litholog.defaults.litholegend.plot()"
    ]
   },
   {
@@ -148,7 +148,7 @@
     "\n",
     "    bed_seqs = []\n",
     "    for name, grp in df.groupby('count'):\n",
-    "        seq = graphiclog.BedSequence.from_dataframe(\n",
+    "        seq = litholog.BedSequence.from_dataframe(\n",
     "                grp,\n",
     "                topcol='tops',\n",
     "                basecol='bases',\n",
