--- a/notebooks/clean_data.ipynb
+++ b/notebooks/clean_data.ipynb
@@ -15,8 +15,8 @@
     "\n",
     "plt.style.use('ggplot')\n",
     "\n",
-    "import graphiclog\n",
-    "from graphiclog import utils, io"
+    "import litholog\n",
+    "from litholog import utils, io"
    ]
   },
   {
@@ -4867,7 +4867,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from graphiclog.wentworth import gs2psi\n",
+    "from litholog.wentworth import gs2psi\n",
     "\n",
     "DEFAULT_GS = 0.016 #mm\n",
     "\n",
