--- a/notebooks/inspect_data.ipynb
+++ b/notebooks/inspect_data.ipynb
@@ -15,8 +15,8 @@
     "\n",
     "plt.style.use('ggplot')\n",
     "\n",
-    "import graphiclog\n",
-    "from graphiclog import utils, io"
+    "import litholog\n",
+    "from litholog import utils, io"
    ]
   },
   {
@@ -2435,7 +2435,7 @@
     "    fig, axes = plt.subplots(ncols=10, figsize=(70, 30))\n",
     "    for ax, seq in zip(axes, seqs):\n",
     "        #seq.resample_data('depth_m', 0.01)\n",
-    "        seq.plot(legend=graphiclog.defaults.litholegend, width_field='grain_size_psi', depth_field='depth_m', ax=ax)\n",
+    "        seq.plot(legend=litholog.defaults.litholegend, width_field='grain_size_psi', depth_field='depth_m', ax=ax)\n",
     "    \n",
     "    plt.show()\n",
     "    "
