--- a/notebooks/test_digitizer_export.ipynb
+++ b/notebooks/test_digitizer_export.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "plt.style.use('ggplot')\n",
     "\n",
-    "import graphiclog"
+    "import litholog"
    ]
   },
   {
@@ -26,7 +26,7 @@
     {
      "data": {
       "text/plain": [
-       "('/home/ross/code/python/projects/graphiclog/graphiclog/__init__.py',\n",
+       "('/home/ross/code/python/projects/litholog/litholog/__init__.py',\n",
        " ['Bed',\n",
        "  'BedSequence',\n",
        "  '__builtins__',\n",
@@ -52,7 +52,7 @@
     }
    ],
    "source": [
-    "graphiclog.__file__, dir(graphiclog)"
+    "litholog.__file__, dir(litholog)"
    ]
   },
   {
@@ -72,7 +72,7 @@
     }
    ],
    "source": [
-    "graphiclog.defaults.litholegend.plot()"
+    "litholog.defaults.litholegend.plot()"
    ]
   },
   {
@@ -246,12 +246,12 @@
    "outputs": [],
    "source": [
     "# use string->array transforms\n",
-    "transforms = {c : graphiclog.utils.string2array_matlab for c in ['grain_size_dia', 'grain_size_thick']}\n",
+    "transforms = {c : litholog.utils.string2array_matlab for c in ['grain_size_dia', 'grain_size_thick']}\n",
     "\n",
     "beds = pd.read_csv('../data/Export_StripLog2020-04-01.csv', converters=transforms)\n",
     "\n",
     "# add_psi column for plots\n",
-    "beds['grain_size_psi'] = beds['grain_size_dia'].apply(graphiclog.wentworth.gs2psi)"
+    "beds['grain_size_psi'] = beds['grain_size_dia'].apply(litholog.wentworth.gs2psi)"
    ]
   },
   {
@@ -278,10 +278,10 @@
     "metacols = ['name', 'collection']\n",
     "\n",
     "# default litho mapping uses `units='psi'`\n",
-    "COMPONENT_MAP = ('mean_gs', lambda gs: graphiclog.defaults.gs2litho(gs, units='mm'))\n",
+    "COMPONENT_MAP = ('mean_gs', lambda gs: litholog.defaults.gs2litho(gs, units='mm'))\n",
     "\n",
     "# NOTE: had to increase tolerance, ambiguous whether tops are depth or elevation?\n",
-    "bed_seq = graphiclog.BedSequence.from_dataframe(beds, topcol='tops', thickcol='th',\n",
+    "bed_seq = litholog.BedSequence.from_dataframe(beds, topcol='tops', thickcol='th',\n",
     "                                                component_map=COMPONENT_MAP,\n",
     "                                                datacols=datacols, \n",
     "                                                metacols=metacols, \n",
@@ -377,7 +377,7 @@
     }
    ],
    "source": [
-    "bed_seq.plot(legend=graphiclog.defaults.litholegend, fig_width=3,\n",
+    "bed_seq.plot(legend=litholog.defaults.litholegend, fig_width=3,\n",
     "             width_field='grain_size_psi', \n",
     "             depth_field='grain_size_thick',\n",
     "             wentworth='coarse')"
