refactor IO/viz mixins, fix some plot bugs

--- a/notebooks/Zane_template.ipynb
+++ b/notebooks/Zane_template.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
     "        seq = litholog.BedSequence.from_dataframe(\n",
     "                grp,\n",
     "                topcol='tops',\n",
-    "                basecol='bases',\n",
+    "                thickcol='th', #basecol='bases',\n",
     "                component_map=COMPONENT_MAP,\n",
     "                datacols=features,\n",
     "                metacols=metacols\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
