--- a/notebooks/working_demo.ipynb
+++ b/notebooks/working_demo.ipynb
@@ -278,7 +278,7 @@
     "demo_names = ['Pukearuhue', 'Magnolia', 'Karoo krf']\n",
     "\n",
     "METACOLS = ['name', 'count', 'collection', 'eod', 'eodnum', 'ng', 'ar']\n",
-    "DATACOLS = ['th','gs_tops_mm', 'snd_shl', 'depth_m',\n",
+    "DATACOLS = ['th', 'snd_shl', 'depth_m',\n",
     "            'gs_tops_mm', 'mean_gs_mm', 'max_gs_mm', 'grain_size_mm',\n",
     "            'gs_tops_psi', 'mean_gs_psi', 'max_gs_psi', 'grain_size_psi']\n",
     "\n",
