--- a/notebooks/actual_demo.ipynb
+++ b/notebooks/actual_demo.ipynb
@@ -30,6 +30,7 @@
     "\n",
     "# NOTES FOR ROSS:\n",
     "- I dont think the filter_nan_gaussian gets used? \n",
+    "- list of authors somewhere? \n",
     "\n",
     "---\n",
     "---\n",
