fix missing missing beds; set up sphinx docs

--- a/notebooks/litholog_basics.ipynb
+++ b/notebooks/litholog_basics.ipynb
@@ -298,8 +298,7 @@
    "source": [
     "### Now let's make some plots\n",
     "\n",
-    "With no arguments, the aspect of the figure is default to 10 and the width of each bed (i.e., the grain size) is the default for the lithology given in `primary`, not the data in `grain_size_mm`. See bleow on how to further control this:\n",
-    "\n"
+    "With no arguments, the aspect of the figure is default to 10 and the width of each bed (i.e., the grain size) is the default for the lithology given in `primary`, not the data in `grain_size_mm`. See below on how to further control this:\n"
    ]
   },
   {
@@ -577,7 +576,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
