notebook re-org, readme

--- a/notebooks/save_for_depstrat/Hurst.ipynb
+++ b/notebooks/save_for_depstrat/Hurst.ipynb
@@ -29,7 +29,7 @@
     {
      "data": {
       "text/plain": [
-       "('/home/ross/code/python/projects/litholog/litholog/__init__.py',\n",
+       "('/opt/anaconda3/lib/python3.8/site-packages/litholog/__init__.py',\n",
        " ['Bed',\n",
        "  'BedSequence',\n",
        "  '__builtins__',\n",
@@ -88,29 +88,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up some default args:\n",
     "\n",
-    "FPATH = '../data/AllBedsWithProfiles_CLEAN.csv'\n",
+    "FPATH = '../data/working2.csv'\n",
     "\n",
     "# Columns to convert from strings to arrays\n",
     "transforms = {c : string2array_pandas for c in ['depth_m', 'grain_size_mm', 'grain_size_psi']}\n",
     "\n",
     "\n",
     "# binary indicators\n",
-    "BINARY_FEATURES = ['snd', 'shl']\n",
+    "BINARY_FEATURES = ['snd_shl']\n",
     "\n",
     "\n",
     "# bed data columns\n",
     "FLOAT_FEATURES = [\n",
     "    'th',\n",
-    "    'gs_tops_psi',\n",
-    "    'mean_gs_psi',\n",
-    "    'max_gs_psi',\n",
-    "    'grain_size_psi',\n",
+    "    'gs_tops_mm',\n",
+    "    'mean_gs_mm',\n",
+    "    'max_gs_mm',\n",
+    "    'grain_size_mm',\n",
     "    'depth_m'\n",
     "]\n",
     "\n",
@@ -118,16 +118,16 @@
     "\n",
     "\n",
     "# Sequence-level metadata\n",
-    "METACOLS = ['name', 'count', 'collection', 'eod', 'eodnum', 'ng', 'ar']\n",
+    "METACOLS = ['name', 'collection', 'ng', 'ar']\n",
     "\n",
     "\n",
     "# Lithology component map\n",
-    "COMPONENT_MAP = ('max_gs_psi', lambda gs: gs2litho(gs, units='psi'))"
+    "COMPONENT_MAP = ('max_gs_mm', lambda gs: gs2litho(gs, units='mm'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
     "    df = pd.read_csv(fpath, converters=transforms)\n",
     "\n",
     "    bed_seqs = []\n",
-    "    for name, grp in df.groupby('count'):\n",
+    "    for name, grp in df.groupby('name'):\n",
     "        seq = litholog.BedSequence.from_dataframe(\n",
     "                grp,\n",
     "                topcol='tops',\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,29 +187,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "252"
+       "9"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Just ones longer than 20\n",
+    "# Just ones longer than 20 sand beds\n",
     "seqs = list(filter(lambda s: len(s.get_field('th', 'sand')) >= 20, sequences))\n",
     "len(seqs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
        "'sand'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,26 +229,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ross/code/python/projects/litholog/litholog/sequence/stats.py:110: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  return np.log10(Rn / Sn) / np.log10(x.size / 2.)\n",
-      "/home/ross/code/python/projects/litholog/litholog/sequence/stats.py:86: RuntimeWarning: invalid value encountered in greater_equal\n",
-      "  p = np.sum(ks >= K) / nsamples\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = []\n",
     "\n",
     "for s in seqs:\n",
     "    sdata = {}\n",
-    "    for feature, take_log in zip(['th', 'mean_gs_psi'], [True, False]):\n",
+    "    for feature, take_log in zip(['th', 'mean_gs_mm'], [True, False]):\n",
     "        D, p, K = s.hurst_D(feature, 'sand', take_log=take_log, nsamples=5000, return_K=True)\n",
     "        sdata.update({f'D_{feature}': D, f'p_{feature}': p, f'K_{feature}': K})\n",
     "    data.append({**sdata, **s.metadata, 'len': len(s)})\n",
@@ -259,29 +248,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'D_th': 0.3656035671436841,\n",
-       " 'p_th': 0.359,\n",
-       " 'K_th': 0.6658140085253251,\n",
-       " 'D_mean_gs_psi': -0.13788736936276813,\n",
-       " 'p_mean_gs_psi': 0.557,\n",
-       " 'K_mean_gs_psi': 0.6195415453366044,\n",
-       " 'name': 'Marnoso 1',\n",
-       " 'count': 1,\n",
-       " 'collection': 'Marnoso-Arenacea',\n",
-       " 'eod': 'basin plain',\n",
-       " 'eodnum': 0,\n",
-       " 'ng': 0.52051379595071,\n",
-       " 'ar': 0.021978021978022,\n",
-       " 'len': 91}"
+       "{'D_th': 2.873644536973763,\n",
+       " 'p_th': 0.0002,\n",
+       " 'K_th': 0.822415107209811,\n",
+       " 'D_mean_gs_mm': 3.1524250585431126,\n",
+       " 'p_mean_gs_mm': 0.0002,\n",
+       " 'K_mean_gs_mm': 0.8443108475942092,\n",
+       " 'name': 'Karoo krf1',\n",
+       " 'collection': 'Skoorsteenberg',\n",
+       " 'ng': 0.772614886,\n",
+       " 'ar': 0.104761905,\n",
+       " 'len': 105}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
